# xprclaw

./: .env.example  .gitignore  DEPLOY.md  DEPLOYMENT.md  PRIVACY.md  QUICKSTART.md  RAILWAY_DEPLOY.md  README.md  TERMS.md  TEST_LOCALLY.md  app.html  docker-compose.mirofish.yml  index.html  manifest.json  package.json  sw.js  xprclaw_standalone.html
.github/workflows/: pages.yml
backend/: .env.example  main.py  requirements.txt
design-previews/: design1.html  design2.html  design3.html
email-templates/: waitlist-invite.md
services/mirofish-adapter/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/mirofish-adapter/docs/specs/: mirofish-integration.md
services/mirofish-adapter/migrations/: 001_init_cache.sql
services/mirofish-adapter/src/xprclaw_mirofish/: __init__.py  api.py  cache.py  client.py  config.py  decision.py  exceptions.py  models.py  personas.py  seed_builder.py  simulator.py
services/mirofish-adapter/tests/: test_api.py  test_cache.py  test_client.py  test_decision.py  test_personas.py  test_seed_builder.py  test_simulator.py
services/mirofish-mock/: Dockerfile  app.py
services/trading-bot/: README.md  client.js  decision-engine.js  decision-engine.test.js
src/: api-client.js  config.js  wallet.js
