[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xprclaw-mirofish"
version = "0.1.0"
description = "MiroFish multi-agent simulator adapter for XPRClaw trading bot"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "GCSC DAO", email = "gcscdao@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Life",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "tenacity>=9.0",
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "mypy>=1.13",
  "ruff>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "asyncio: async test",
  "integration: integration test",
  "smoke: smoke test",
]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "RUF"]
ignore = ["E501"]  # line-too-long — handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["xprclaw_mirofish"]
